--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Baims Daily forecast</string>
     <string name="city">City</string>
     <string name="next_days">Next Days</string>
-    <string name="select_your_city">Select your City</string>
+    <string name="select_your_city">Select Your City</string>
 </resources>
