--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="city">City</string>
     <string name="next_days">Next Days</string>
     <string name="select_your_city">Select Your City</string>
+    <string name="loading">Loading ...</string>
+    <string name="retry">Retry</string>
 </resources>
