--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="select_your_city">Select Your City</string>
     <string name="loading">Loading ...</string>
     <string name="retry">Retry</string>
+    <string name="no_internet_connection">No internet connection</string>
 </resources>
